@@ -1,4 +1,5 @@
 Version 6.2.4
+- Added freopen() function
 - Fixed some problems with sizeof() used to declare local variables
 - Several improvements to C locale() related functions
 
